[Карты] Добавил Танкер.

--- a/maps/Locations.cfg
+++ b/maps/Locations.cfg
@@ -58,3 +58,20 @@ auto_garbage=0
 entrance=$0 241
 size=6
 
+[Area 8]
+name=Tanker
+map_0=tanker_deck0				12
+map_1=tanker_deck1				13
+map_2=tanker_deck2				14
+map_3=tanker_deck3				15
+map_4=tanker_deck4				16
+map_5=tanker_str0				17
+map_6=tanker_str1				18
+map_7=tanker_str2				19
+map_8=tanker_str3				20
+map_9=tanker_str4				21
+map_10=tanker_sub1				22
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=24
