--- a/maps/GenerateWorld.cfg
+++ b/maps/GenerateWorld.cfg
@@ -1,5 +1,6 @@
-@	2 		505 	75  	# startmap
-@	3		515		15		# dreamMap
-@	5		995		995		# haven
-@	6		975		975		# arena1
-@	7		1005	995		# Hell
+@	2 		  5		  5  	# startmap
+@	3		  5		 15		# dreamMap
+@	5		 15		 15		# haven
+@	6		 25		  5		# arena1
+@	7		 25	     15		# hell
+@	8		 25		 25		# tanker
