[Global] Добавлена локация LOCATION_Modoc_1_1 (10) на координаты (105,105). Состоит из двух карт:   Поверхность -  MAP_MODOC_MINE_ENTRANCE (30)   Подземка    -  MAP_MODOC_MINE_SHAFTS (31)
+ подключены переходы, имя карт, спаун растений, убран спаун лута в пустых контейнерах.

--- a/maps/Locations.cfg
+++ b/maps/Locations.cfg
@@ -75,3 +75,13 @@ Visible=1
 auto_garbage=0
 entrance=$0 0
 size=24
+
+[Area 10]
+name=Modoc_1_1
+map_0=Modoc_mine_entrance		30
+map_1=Modoc_mine_shafts			31
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
+
