[Global] Добавлена локация LOCATION_Modoc_2_1 (11) на координаты (115,105). Состоит из одной карты:   Поверхность -  MAP_MODOC_GETTO (32)
+ подключены переходы, имя карт, спаун растений, убран спаун лута в пустых контейнерах.

--- a/maps/Locations.cfg
+++ b/maps/Locations.cfg
@@ -85,3 +85,11 @@ auto_garbage=0
 entrance=$0 0
 size=6
 
+[Area 11]
+name=Modoc_2_1
+map_0=Modoc_getto				32
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
+
