[Global] Добавлена локация Modoc_city (12) на координаты (125,105). Состоит из трёх карт:   Поверхность   - MAP_MODOC_CITY_MAIN (33)   Верхние этажи - MAP_MODOC_CITY_FLOORS ( 34 )   Подземка      - MAP_MODOC_CITY_UNDERGROUND ( 35 )
+ подключены переходы, телепорты, имена карт, музыка, убран спаун лута в пустых контейнерах.

--- a/maps/Locations.cfg
+++ b/maps/Locations.cfg
@@ -93,3 +93,13 @@ auto_garbage=0
 entrance=$0 0
 size=6
 
+[Area 12]
+name=Modoc_city
+map_0=Modoc_city_main			33
+map_1=Modoc_city_floors			34
+map_2=Modoc_city_underground	35
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
+
