[Global] Добавлена локация Modoc_5_1 (13) на координаты (145,105). Состоит из одной карты:   Поверхность   - MAP_MODOC_FARM (36)
+ подключены переходы, телепорты, имя карты, музыка, убран спаун лута в пустых контейнерах.

--- a/maps/Locations.cfg
+++ b/maps/Locations.cfg
@@ -103,3 +103,11 @@ auto_garbage=0
 entrance=$0 0
 size=6
 
+[Area 13]
+name=Modoc_5_1
+map_0=Modoc_farm				36
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
+
