--- a/maps/Locations.cfg
+++ b/maps/Locations.cfg
@@ -111,3 +111,10 @@ auto_garbage=0
 entrance=$0 0
 size=6
 
+[Area 14]
+name=Modoc_6_1
+map_0=Modoc_sawmill				37
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
