[Global] Добавлена локация Modoc_1_2 (15) на координаты (105,115). Состоит из одной карты:   Поверхность   - MAP_MODOC_WATER_TOWER ( 38 )
+ подключены переходы, телепорты, музыка, установлено имя карты, рост растений, убран спаун лута в пустых контейнерах.

--- a/maps/Locations.cfg
+++ b/maps/Locations.cfg
@@ -118,3 +118,19 @@ Visible=1
 auto_garbage=0
 entrance=$0 0
 size=6
+
+[Area 14]
+name=Modoc_6_1
+map_0=Modoc_sawmill				37
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
+
+[Area 15]
+name=Modoc_1_2
+map_0=Modoc_water_tower			38
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
