[Global] Добавлена локация Modoc_2_2 (16) на координаты (115,115). Состоит из одной карты:   Поверхность   - MAP_MODOC_DESERT ( 39 )
+ подключены переходы, телепорты, музыка, установлено имя карты, рост растений, убран спаун лута в пустых контейнерах.

--- a/maps/Locations.cfg
+++ b/maps/Locations.cfg
@@ -134,3 +134,12 @@ Visible=1
 auto_garbage=0
 entrance=$0 0
 size=6
+
+[Area 16]
+name=Modoc_2_2
+map_0=Modoc_desert				39
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
+
