[Global] Добавлена локация Modoc_5_2 (17) на координаты (145,115). Состоит из одной карты:   Поверхность   - MAP_MODOC_BROWN_WOOD ( 40 )
+ подключены переходы, телепорты, музыка, установлено имя карты, рост растений, убран спаун лута в пустых контейнерах.

--- a/maps/Locations.cfg
+++ b/maps/Locations.cfg
@@ -143,3 +143,10 @@ auto_garbage=0
 entrance=$0 0
 size=6
 
+[Area 17]
+name=Modoc_5_2
+map_0=Modoc_brown_wood			40
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
