[Global] Добавлена локация Modoc_6_2 (18) на координаты (155,115). Состоит из одной карты:   Поверхность   - MAP_MODOC_GREY_WOOD ( 41 )
+ подключены переходы, телепорты, музыка, установлено имя карты, рост растений, убран спаун лута в пустых контейнерах.

--- a/maps/Locations.cfg
+++ b/maps/Locations.cfg
@@ -150,3 +150,11 @@ Visible=1
 auto_garbage=0
 entrance=$0 0
 size=6
+
+[Area 18]
+name=Modoc_6_2
+map_0=Modoc_grey_wood			41
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
