[Global] Добавлена локация Modoc_1_3 (19) на координаты (105,125). Состоит из одной карты:   Поверхность   - MAP_MODOC_BARTERGROUNDS ( 42 )
+ подключены переходы, телепорты, музыка, установлено имя карты, рост растений, убран спаун лута в пустых контейнерах.

--- a/maps/Locations.cfg
+++ b/maps/Locations.cfg
@@ -158,3 +158,11 @@ Visible=1
 auto_garbage=0
 entrance=$0 0
 size=6
+
+[Area 19]
+name=Modoc_1_3
+map_0=Modoc_bartergrounds		42
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
