[Global] Добавлена локация Modoc_2_3 (20) на координаты (115,125). Состоит из одной карты:   Поверхность   - MAP_MODOC_SWAMP ( 43 )
+ подключены переходы, телепорты, музыка, установлено имя карты, рост растений, убран спаун лута в пустых контейнерах.

--- a/maps/Locations.cfg
+++ b/maps/Locations.cfg
@@ -166,3 +166,11 @@ Visible=1
 auto_garbage=0
 entrance=$0 0
 size=6
+
+[Area 20]
+name=Modoc_2_3
+map_0=Modoc_swamp				43
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
