[Global] Добавлена локация Modoc_3_3 (21) на координаты (125,125). Состоит из одной карты:   Поверхность   - MAP_MODOC_WASTELAND1 ( 44 )
+ подключены переходы, телепорты, музыка, установлено имя карты, рост растений, убран спаун лута в пустых контейнерах.

--- a/maps/Locations.cfg
+++ b/maps/Locations.cfg
@@ -174,3 +174,11 @@ Visible=1
 auto_garbage=0
 entrance=$0 0
 size=6
+
+[Area 21]
+name=Modoc_3_3
+map_0=Modoc_wasteland1			44
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
