[Global] Добавлена локация Modoc_4_3 (22) на координаты (135,125). Состоит из одной карты:   Поверхность   - MAP_MODOC_ROAD1 ( 45 )
+ подключены переходы, телепорты, музыка, установлено имя карты, рост растений, (!)ОСТАВЛЕН(!) спаун лута в пустых контейнерах.

--- a/maps/Locations.cfg
+++ b/maps/Locations.cfg
@@ -182,3 +182,11 @@ Visible=1
 auto_garbage=0
 entrance=$0 0
 size=6
+
+[Area 22]
+name=Modoc_4_3
+map_0=Modoc_road1				45
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
