[Global] Добавлена локация Modoc_5_3 (23) на координаты (145,125). Состоит из одной карты:   Поверхность   - MAP_MODOC_SWAMP_BLOSSOM ( 46 )
+ подключены переходы, телепорты, музыка, установлено имя карты, рост растений, убран спаун лута в пустых контейнерах.

--- a/maps/Locations.cfg
+++ b/maps/Locations.cfg
@@ -190,3 +190,11 @@ Visible=1
 auto_garbage=0
 entrance=$0 0
 size=6
+
+[Area 23]
+name=Modoc_5_3
+map_0=Modoc_swamp_blossom		46
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
