--- a/maps/Locations.cfg
+++ b/maps/Locations.cfg
@@ -198,3 +198,11 @@ Visible=1
 auto_garbage=0
 entrance=$0 0
 size=6
+
+[Area 24]
+name=Modoc_6_3
+map_0=Modoc_lake				47
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
