[Global] Добавлено 6 локаций по координатам в диапазоне [1,4] до [6,4].  (!) На картах не настроен эмбиент, дроп лута, названия переходов, ГМ-телепорты и рост растений (!)

--- a/maps/GenerateWorld.cfg
+++ b/maps/GenerateWorld.cfg
@@ -23,3 +23,10 @@
 @	22		135		125		# Modoc_4_3
 @	23		145		125		# Modoc_5_3
 @	24		155		125		# Modoc_6_3
+
+@	25		105		135		# Modoc_1_4
+@	26		115		135		# Modoc_2_4
+@	27		125		135		# Modoc_3_4
+@	28		135		135		# Modoc_4_4
+@	29		145		135		# Modoc_5_4
+@	30		155		135		# Modoc_6_4
