--- a/maps/Locations.cfg
+++ b/maps/Locations.cfg
@@ -206,3 +206,52 @@ Visible=1
 auto_garbage=0
 entrance=$0 0
 size=6
+
+[Area 25]
+name=Modoc_1_4
+map_0=Modoc_deathpit_surface	48
+map_1=Modoc_deathpit_lair		49
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
+
+[Area 26]
+name=Modoc_2_4
+map_0=Modoc_zone_alpha			50
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
+
+[Area 27]
+name=Modoc_3_4
+map_0=Modoc_wasteland2			51
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
+
+[Area 28]
+name=Modoc_4_4
+map_0=Modoc_road_cafe			52
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
+
+[Area 29]
+name=Modoc_5_4
+map_0=Modoc_ruins				53
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
+
+[Area 30]
+name=Modoc_6_4
+map_0=Modoc_junkyard			54
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
