[Global] Добавлено 6 локаций по координатам в диапазоне от [1,5] до [6,5]. Плюс ещё одна по координатам [4,6].  (!) На картах не настроен эмбиент, дроп лута, названия переходов, ГМ-телепорты и рост растений (!)

--- a/maps/Locations.cfg
+++ b/maps/Locations.cfg
@@ -255,3 +255,61 @@ Visible=1
 auto_garbage=0
 entrance=$0 0
 size=6
+
+[Area 31]
+name=Modoc_1_5
+map_0=Modoc_Phoenix_surface		55
+map_1=Modoc_Phoenix_entrance	56
+map_2=Modoc_Phoenix_depth		57
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
+
+[Area 32]
+name=Modoc_2_5
+map_0=Modoc_zone_beta			58
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
+
+[Area 33]
+name=Modoc_3_5
+map_0=Modoc_wasteland2			59
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
+
+[Area 34]
+name=Modoc_4_5
+map_0=Modoc_road2				60
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
+
+[Area 35]
+name=Modoc_5_5
+map_0=Modoc_gas_station			61
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
+
+[Area 36]
+name=Modoc_6_5
+map_0=Modoc_junktown			62
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
+
+[Area 37]
+name=Modoc_4_6
+map_0=Modoc_train_station		63
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=6
