--- a/maps/GenerateWorld.cfg
+++ b/maps/GenerateWorld.cfg
@@ -30,3 +30,12 @@
 @	28		135		135		# Modoc_4_4
 @	29		145		135		# Modoc_5_4
 @	30		155		135		# Modoc_6_4
+
+@	31		105		145		# Modoc_1_5
+@	32		115		145		# Modoc_2_5
+@	33		125		145		# Modoc_3_5
+@	34		135		145		# Modoc_4_5
+@	35		145		145		# Modoc_5_5
+@	36		155		145		# Modoc_6_5
+
+@	37		135		155		# Modoc_4_6
