--- a/data/CritterTypes.cfg
+++ b/data/CritterTypes.cfg
@@ -667,3 +667,31 @@
 @  186    HFDSRT     11   0  0  1  1  1  1  1   1 0 0 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0    400  200   4  8  0  0   hfcmbt # CRTYPE_CA_SAND_1_F                   # ББ "Пустынник" МК1
 @  188    HFCMBDBR   11   0  0  1  1  1  1  1   1 0 0 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0    400  200   4  8  0  0   hfcmbt # CRTYPE_CA_SAND_3_F                   # ББ "Пустынник" МК3
 @  382    HFCBTG     11   0  0  1  1  1  1  1   1 0 0 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0    400  200   4  8  0  0   hfcmbt # CRTYPE_CA_SAND_2_F                   # ББ Сероватая
+
+#
+# Tactics critters
+#
+
+# Animation substitutes
+#  Shootgun to Rifle
+#  Flamer to Heavy Rifle
+#  Sword and Long Sword to Knife
+#  Hammer and Axe to Club
+# N/A
+#  Bow
+
+# Characters
+#          Name               Alias MH Tp Wk Rn Am Ar Rt   A B C D E F G H I J K L M N O P Q R S T U V W X Y Z   Walk  Run   Move Sound name
+# spr-character_0.bos
+@  500    CEnvironmental        -    0  2  1  1  1  1  1   1 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0    400  200   0  0  GenericU
+@  501    CGhoul                -    0  2  1  1  1  1  1   1 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0    400  200   0  0  GenericM
+@  502    CGhoulArmour          -    0  2  1  1  1  1  1   1 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0    400  200   0  0  GenericM
+@  503    CLeatherFemale        -    0  2  1  1  1  1  1   1 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0    400  200   0  0  GenericF
+@  504    CLeatherMale          -    0  2  1  1  1  1  1   1 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0    400  200   0  0  GenericM
+@  505    CMetalFemale          -    0  2  1  1  1  1  1   1 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0    400  200   0  0  GenericF
+@  506    CMetalMale            -    0  2  1  1  1  1  1   1 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0    400  200   0  0  GenericM
+@  507    CMutant               -    0  2  1  1  1  0  1   1 0 0 1 1 1 1 0 0 0 1 1 1 1 0 1 1 1 0 0 0 0 0 0 0 0    400  200   0  0  GenericM
+@  508    CMutantArmour         -    0  2  1  1  1  0  1   1 0 0 1 1 1 1 0 0 0 1 1 1 1 0 1 1 1 0 0 0 0 0 0 0 0    400  200   0  0  GenericM
+@  509    CPower                -    0  2  1  1  1  1  1   1 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0    400  200   0  0  GenericU
+@  510    CTribalFemale         -    0  2  1  1  1  1  1   1 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0    400  200   0  0  GenericF
+@  511    CTribalMale           -    0  2  1  1  1  1  1   1 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0    400  200   0  0  GenericM
