--- a/maps/GenerateWorld.cfg
+++ b/maps/GenerateWorld.cfg
@@ -39,3 +39,15 @@
 @	36		155		145		# Modoc_6_5
 
 @	37		135		155		# Modoc_4_6
+
+//New Reno Caravan
+@    	60        	105        	165        	# new_reno
+@    	61        	115        	165        	# riverdale_up_3_3
+@    	62        	125        	165        	# riverdale_up_3_2
+@    	63        	135        	165        	# riverdale_canyon
+@    	64        	145        	165        	# riverdale0_2
+@    	65        	155        	165        	# riverdale1_2
+@    	66        	165        	165        	# riverdale5_3
+@    	67        	175        	165        	# riverdale6_2
+@    	68        	185        	165        	# sandbox3_3
+@    	69        	195        	165        	# riverdale7_2
