--- a/maps/Locations.cfg
+++ b/maps/Locations.cfg
@@ -313,3 +313,92 @@ Visible=1
 auto_garbage=0
 entrance=$0 0
 size=6
+
+[Area 60]
+name=new_reno
+map_0=new_reno               		97
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=24
+
+[Area 61] 
+name=riverdale_up_3_3
+map_0=riverdale_up_3_3              	98
+map_1=riverdale_up_3_3dn        	99
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=24
+
+[Area 62]
+name=riverdale_up_3_2
+map_0=riverdale_up_3_2              	100
+map_1=riverdale_up_3_2dn        	101
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=24
+
+[Area 63]
+name=riverdale_canyon
+map_0=riverdale_canyon             	102
+map_1=riverdale_canyon_dn        	103
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=24
+
+[Area 64]
+name=riverdale0_2
+map_0=riverdale0_2             		104
+map_1=riverdale0_2dn             	105
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=24
+
+[Area 65]
+name=riverdale1_2
+map_0=riverdale1_2              	106
+map_1=riverdale1_2dn             	107
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=24
+
+[Area 66]
+name=riverdale5_3
+map_0=riverdale5_3              	108
+map_1=riverdale5_3dn              	109
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=24
+
+[Area 67]
+name=riverdale6_2
+map_0=riverdale6_2              	110
+map_1=riverdale6_2dn             	111
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=24
+
+[Area 68]
+name=sandbox3_3
+map_0=sandbox3_3            		112
+map_1=sandbox3_3dn            		113
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=24
+
+[Area 69]
+name=vbbox_road
+map_0=vbbox_road	 	 	114
+map_1=vbbox_road_dn		 	115
+Visible=1
+auto_garbage=0
+entrance=$0 0
+size=24
